# link-persona-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TROUBLESHOOTING.md  docker-compose.yml  pyproject.toml  start.sh
api/: README.md  config.py  exceptions.py  fetcher.py  llm_client.py  main.py  persona_loader.py
api/models/: __init__.py  responses.py
api/personas/: README.md  artist.yaml  entrepreneur.yaml  idol.yaml  influencer.yaml  otaku.yaml  professor.yaml  psychologist.yaml  sarcastic.yaml
api/services/: __init__.py  article_service.py  debate_service.py
bot/: README.md  api_client.py  config.py  exceptions.py  main.py  models.py
bot/handlers/: __init__.py  command_handler.py  message_handler.py
bot/state/: __init__.py  conversation_manager.py
bot/ui/: __init__.py  persona_components.py
docs/: 01.project.md  02.architecture.md  04.prompt-design.md
docs/knowledge/: koyeb-deployment.md
tools/test/: test_discord_connection.py  test_llm_connection.py
