[project]
name = "link-persona-bot"
version = "0.1.0"
description = "Discord Bot for URL-shared article summarization with AI personalities"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.uv]
dev-dependencies = []
